Fixed an issue with preview tabs cropping their labels at large zoom sizes

--- a/site/assets/css/_tabs-automatic.css
+++ b/site/assets/css/_tabs-automatic.css
@@ -32,7 +32,6 @@ This software or document includes material copied from or derived from https://
   border: var(--tabpanel-border);
   border-radius: var(--tabpanel-radius) var(--tabpanel-radius) 0 0;
   background: hsl(from var(--tabpanel-background) h s calc(l - 10));
-  max-width: 22%;
   overflow: hidden;
 }
 
